--- a/index.html
+++ b/index.html
@@ -10,27 +10,43 @@
 </head>
 <body>
     <div class="textbox">
-      <div class="interactive"
-        <p>Sex:
-          <input type="radio" name="sex" value="Male">Male
-          <input type="radio" name="sex" value="Female">Female
-        </p>
-        <p>Height (cm):
-            <input type="text" id="height"><br>
-        </p>
-
-        <p>Weight (kg):
-            <input type="text" id="weight"><br>
-        </p>
-        <div class="buttons">
-          <button onclick='calculate()'>Calculate BMI</button>
-          <button onclick='clear()'>Clear</button>
+      <div class="info">
+        <div class="interactive"
+          <p>Sex:
+            <input type="radio" name="sex" value="Male">Male
+            <input type="radio" name="sex" value="Female">Female
+          </p>
+          <p>Age:
+              <input type="text" id="age" maxlength="3" size="3"><br>
+          </p>
+          <p>Activity Level: 
+            <select name="activity" id="activity">
+              <option value="1.2">Little to no exercise</option>
+              <option value="1.375">Exercise 1–3 days/week</option>
+              <option value="1.55">Exercise 3–5 days/week</option>
+              <option value="1.725">Exercise 6–7 days/weeke</option>
+              <option value="1.9">Extensive exercise 6–7 days/week</option>
+            </select>
+          </p>
+          <p>Height (cm):
+              <input type="text" id="height"><br>
+          </p>
+  
+          <p>Weight (kg):
+              <input type="text" id="weight"><br>
+          </p>
+          <div class="buttons">
+            <button onclick='calculate()'>Calculate BMI</button>
+            <button onclick='clear()'>Clear</button>
+          </div>
+        </div>
+        <div class="result">
+          Your BMI is <strong>variable.</strong> These are what appear when Calculate BMI is clicked. 
         </div>
       </div>
-      <p id="result"></p>
     </div>
     <div class="credits">
-      Developed by Tony Lin and Aiden Ly for Recess Hacks 3.0.
+      <strong>Developed by Tony Lin and Aiden Ly for Recess Hacks 3.0.</strong>
     </div>
 </body>
 </html>
