Final changes, added site name and transitions

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>BMI Calculator</title>
+   <title>HealthMax</title>
 </head>
 <body>
+    <div class="sitename">
+      <strong>HealthMax</strong>
+    </div>
     <div class="textbox">
       <div class="info">
         <div class="interactive">
@@ -56,7 +59,7 @@
       </div>
     </div>
     <div class="credits">
-      <strong>Developed by Tony Lin and Aiden Ly for Recess Hacks 3.0.</strong>
+      <strong>Developed by Aiden Ly and Tony Lin for Recess Hacks 3.0.</strong>
     </div>
 </body>
 </html>
